# ha-miner

./: README.md  hacs.json  pyproject.toml  requirements.txt
custom_components/miner/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  patch.py  select.py  sensor.py  services.yaml  strings.json
custom_components/miner/pyasic/miners/: factory.py
custom_components/miner/translations/: en.json
