[tool.poetry]
#EBE
#name = "hass-miner"
#version = "1.1.19"
name = "ha-miner"
version = "1.0.1"

description = ""
authors = ["bbemoll <dev@bbemoll.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13.0,<3.14"
homeassistant = "^2025.2.3"
colorlog = "^6.9.0"
ruff = "^0.8.4"

#EBE
#pyasic = "^0.72.9"
ha-pyasic = "9.9.1"

setuptools = "^75.6.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
